Fix missing span tag on ToC items
There is a missing span tag in the table of contents where text is placed directly into a div, breaking convention.

Change-Id: I12280e2c6a6e688b36a906d5b5a5c5deba42c977

--- a/includes/templates/TableOfContents__line.mustache
+++ b/includes/templates/TableOfContents__line.mustache
@@ -2,7 +2,9 @@
 	class="vector-toc-list-item vector-toc-level-{{toclevel}}{{#is-top-level-section}}{{^vector-is-collapse-sections-enabled}} vector-toc-list-item-expanded{{/vector-is-collapse-sections-enabled}}{{/is-top-level-section}}">
 	<a class="vector-toc-link" href="#{{linkAnchor}}">
 		<div class="vector-toc-text">
-		<span class="vector-toc-numb">{{number}}</span>{{{line}}}</div>
+			<span class="vector-toc-numb">{{number}}</span>
+			<span>{{{line}}}</span>
+		</div>
 	</a>
 	{{#extensionData.DiscussionTools-html-summary}}
 	{{{.}}}
