Correct how font sizes apply to headings
The margin and font rules are being overriden in DiscussionsTools
using equal specificity. The correction to the load order in
ResourceLoader skin module in
I83ac918ad8807c65aab2cd1dd8d7d2cd34b512af will break this.

Bug: T354975
Bug: T357929
Change-Id: I15eaf43c6750c76363ec804eda9b8ca6ec4709c2

--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -131,6 +131,18 @@ pre,
 		font-size: @font-size-reset; // Reset.
 	}
 
+	// On Talk:Test?dtenable=0 h2 is inside mw-heading which results in larger than
+	// expected font size since @font-size-heading-2 is defined in ems (T357929).
+	// TODO: Consider switching font-sizes to rems instead of ems to remove these styles.
+	.mw-heading2 h2,
+	.mw-heading3 h3,
+	.mw-heading4 h4,
+	.mw-heading5 h5,
+	.mw-heading6 h6 {
+		margin-top: 0;
+		font-size: inherit;
+	}
+
 	p {
 		// T351754 Use padding to avoid margin collapsing between adjacent <p> elements
 		// creating an effective margin-bottom: 1em
