icons: restore "background-" CSS rules
Temporarily hard-codes some CSS background rules after Codex's
CSS-icon mixins stopped supplying them upstream (after changing
to use mask-image in icons).

Bug: T358160
Change-Id: I13be424c58b105472ef22f14e4381693f2985cd8

--- a/resources/skins.vector.styles/components/PageToolbar.less
+++ b/resources/skins.vector.styles/components/PageToolbar.less
@@ -23,6 +23,9 @@
 		.cdx-mixin-css-icon-background( @size-icon-small );
 		.cdx-mixin-css-icon-size( @size-icon-small );
 		.cdx-mixin-css-icon-alignment( );
+
+		// Temporary fix for https://phabricator.wikimedia.org/T356540
+		background-size: ~'calc( max( @{size-icon-small}, @{min-size-icon-small} ) )';
 	}
 }
 
