Table of contents button goes transparent on hover
- Exclude the checkbox in the TOC from the hack done in https://phabricator.wikimedia.org/T333394
- This patch might not be needed as a restructure of codex import to vector could resolve most of the issues

Bug: T344066
Change-Id: I35b2ffa7a761e3ea1460fa97642966486791bab9

--- a/resources/skins.vector.styles/components/Button.less
+++ b/resources/skins.vector.styles/components/Button.less
@@ -56,11 +56,11 @@
 
 // Handle button styles in checkbox hack, copied from Codex
 // FIXME: Remove these styles when Codex supports the checkbox hack in T333394
-input:hover + .cdx-button:not( .cdx-button--action-progressive ) {
+input:hover + .cdx-button:not( .cdx-button--action-progressive ) + .cdx-button:not( .vector-page-titlebar-toc ) {
 	background-color: @background-color-button-quiet--hover;
 }
 
-input:active + .cdx-button:not( .cdx-button--action-progressive ) {
+input:active + .cdx-button:not( .cdx-button--action-progressive ) + .cdx-button:not( .vector-page-titlebar-toc ) {
 	background-color: @background-color-button-quiet--active;
 	color: @color-emphasized;
 	border-color: @border-color-interactive;
