Enable night theme in Vector
- New night theme added via Codex `.cdx-mode-dark();` mixin.
- CSS custom properties separated from skin.less.
- Font-size rem conversion removed since Codex now uses rems.
- bundlesize increased by 1kb ( followup from
Icfcb5c7418061a5727580f0685054356ba4edb72 ).
- Icons that use background-images are inverted for night-theme.
- Linter error fixed for long-lines in clientPreferences.js

Co-Author: <Bernard Wang> bwang@wikimedia.org
Bug: T354889
Depends-On: I1f54bf4f144eaec6ed317c04bd0c851c2f01b42c
Change-Id: I3a8a147b6be67bc830f0d3b816a4b85c26f99cf1

--- a/resources/mediawiki.less/vector-2022/mediawiki.skin.variables.less
+++ b/resources/mediawiki.less/vector-2022/mediawiki.skin.variables.less
@@ -14,6 +14,11 @@
  */
 
 @import 'mediawiki.skin.defaults.less';
+
+/**
+ * Codex design tokens. This imports Less variables, some of which refer to CSS variables.
+ * The CSS variable values are imported in CSSCustomProperties.less.
+ */
 @import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui.less';
 
 // Overrides for Codex variables:
