--- a/resources/skins.vector.styles/components/Icon.less
+++ b/resources/skins.vector.styles/components/Icon.less
@@ -20,3 +20,22 @@
 	// Temporary fix for https://phabricator.wikimedia.org/T356540
 	background-size: ~'calc( max( @{size-icon-x-small}, @{min-size-icon-x-small} ) )';
 }
+
+// FIXME: T363920 Remove when all icons are migrated from ResourceLoader to Codex
+// Dont invert language icon because it is blue
+.vector-icon:not( .mw-ui-icon-wikimedia-language-progressive ) {
+	html.skin-theme-clientpref-night & {
+		filter: invert( 1 );
+	}
+
+	/**
+	 * Auto night mode.
+	 *
+	 * Applies the night mode color palette only in response to system settings.
+	 */
+	@media ( prefers-color-scheme: dark ) {
+		html.skin-theme-clientpref-os & {
+			filter: invert( 1 );
+		}
+	}
+}
