--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -1,44 +1,75 @@
-/**
- * Vector CSS Custom properties
- * ----------------------------
- * Please be aware that these properties are accessible via *any* client-side code.
- * These variables should mirror Codex design token names and values:
- * https://doc.wikimedia.org/codex/latest/design-tokens
- * Only include properties that are required for client-side modification.
- *
- * @private - Currently, these variables are only intended for use by Vector 2022,
- *            however, they are designed to mimic the naming convention in Codex tokens
- *            in order to facilitate an eventual migration to a centralized source.
- * @experimental
- * @since October 2023 (MediaWiki 1.42)
- */
+@import 'mediawiki.skin.variables.less';
+@import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui-mixin-dark.less';
+@import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui-reset.less';
 
-:root {
-	--font-size-medium: unit( @font-size-small, rem );
-	--line-height-medium: @line-height-small;
-	--background-color-base: @background-color-base;
+/**
+ * Light mode
+ *
+ * Applies the light mode color palette by default
+ * or with the .skin-invert, or .notheme classes
+ */
+:root,
+.skin-invert,
+.notheme {
+	.cdx-mode-reset();
 }
 
-.night-mode-palette() {
-	/* T354889 */
+/**
+ * Forced night mode.
+ *
+ * Applies the night mode color palette per the users explicit preference,
+ * regardless of system settings.
+ */
+html.skin-theme-clientpref-night {
+	color-scheme: dark;
+	.cdx-mode-dark();
+}
+
+html.skin-theme-clientpref-night .skin-invert {
+	color-scheme: light;
+	filter: invert( 1 ) hue-rotate( 180deg );
+}
+
+html.skin-theme-clientpref-night .notheme {
+	color-scheme: light;
+	color: var( --color-base );
+}
+
+/**
+ * Auto night mode.
+ *
+ * Applies the night mode color palette only in response to system settings.
+ */
+@media ( prefers-color-scheme: dark ) {
+	html.skin-theme-clientpref-os {
+		color-scheme: light dark;
+		.cdx-mode-dark();
+	}
+
+	html.skin-theme-clientpref-os .notheme {
+		color-scheme: light;
+	}
+
+	html.skin-theme-clientpref-os .skin-invert {
+		color-scheme: light;
+		filter: invert( 1 ) hue-rotate( 180deg );
+	}
+}
+
+/**
+ * Font size settings
+ */
+.vector-feature-custom-font-size-clientpref-0 {
+	--font-size-medium: @font-size-small;
+	--line-height-medium: @line-height-small;
 }
 
 .vector-feature-custom-font-size-clientpref-1 {
-	--font-size-medium: unit( @font-size-medium, rem );
-	--line-height-medium: 1.6;
+	--font-size-medium: @font-size-medium;
+	--line-height-medium: @line-height-medium;
 }
 
 .vector-feature-custom-font-size-clientpref-2 {
-	--font-size-medium: unit( @font-size-x-large, rem );
+	--font-size-medium: @font-size-x-large;
 	--line-height-medium: 1.5;
-}
-
-html.skin-theme-clientpref-night {
-	.night-mode-palette();
-}
-
-@media ( prefers-color-scheme: dark ) {
-	html.skin-theme-clientpref-os {
-		.night-mode-palette();
-	}
 }
