Interaction to Next Paint (INP) Core Web Vital Improvement
According to a Google contact, given we set viewport to 1000px
for mobile devices viewing Vector get a tap delay.

The solution was suggested in https://developer.chrome.com/blog/300ms-tap-delay-gone-away?hl=en
and Peter has confirmed helps improve performance.

A supports query is added to limit this rule to only browsers where
it applies.

Bug: T358380
Change-Id: Ifd7d8951e06e3ba0faaed354492d23e6e0bc8f69

--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -156,3 +156,11 @@ body {
 .skin--responsive .mw-page-container {
 	min-width: auto;
 }
+
+// Address issues with INP: T358380
+// This can be removed if Vector 2022 ever becomes responsive.
+// More information:
+// https://developer.chrome.com/blog/300ms-tap-delay-gone-away?hl=en
+html {
+	touch-action: manipulation;
+}
