Address FIXME relating to use of !important
The !important is no longer needed now that T354975 is done.

Change-Id: I62d9dfd03064167851a34e25751919b73734d1e2

--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -169,8 +169,7 @@ pre,
 	ul,
 	ol {
 		// Override default spacing so that lists entirely rely on adjacent sibling elements for spacing
-		// FIXME: Remove !important with T354975
-		margin-top: 0 !important; /* stylelint-disable-line declaration-no-important */
+		margin-top: 0;
 	}
 }
 
