--- a/resources/skins.vector.styles/components/MenuTabs.less
+++ b/resources/skins.vector.styles/components/MenuTabs.less
@@ -19,6 +19,11 @@
 		color: @color-link;
 	}
 
+	/* T361841 add invisible bottom border by default */
+	.mw-list-item.vector-tab-noicon a {
+		border-bottom: 2px @border-style-base @border-color-transparent;
+	}
+
 	/* focus and hover have outlines. Text underline interferes with bottom border */
 	.mw-list-item.vector-tab-noicon a:focus,
 	.mw-list-item.vector-tab-noicon a:hover {
