Add h1 headings to fix for applying font-sizes
h1 headings can be created in wikitext but are discouraged.  They
nevertheless appear in the corpus.

https://www.mediawiki.org/wiki/Help_talk:Formatting#Level_1

Bug: T359881
Follows-Up: I15eaf43c6750c76363ec804eda9b8ca6ec4709c2
Change-Id: I1caa6809e1be14f87c791faac852610a522d1c5e

--- a/resources/skins.vector.styles.legacy/typography.less
+++ b/resources/skins.vector.styles.legacy/typography.less
@@ -145,6 +145,7 @@ pre,
 	// On Talk:Test?dtenable=0 h2 is inside mw-heading which results in larger than
 	// expected font size since @font-size-heading-2 is defined in ems (T357929).
 	// TODO: Consider switching font-sizes to rems instead of ems to remove these styles.
+	.mw-heading1 h1,
 	.mw-heading2 h2,
 	.mw-heading3 h3,
 	.mw-heading4 h4,
