Use client preferences for appearances menu
Bug: T361586
Change-Id: I636a557e724f23ea18da135bac59cb304ba81091

--- a/resources/skins.vector.styles/components/ClientPreferences.less
+++ b/resources/skins.vector.styles/components/ClientPreferences.less
@@ -1,6 +1,9 @@
 // Ensure there is only 1 client prefs landmark at anytime
+// TODO: Remove old classes after has been in prod
 .vector-feature-client-prefs-pinned-enabled .vector-user-links .vector-client-prefs-landmark,
-.vector-feature-client-prefs-pinned-disabled .vector-column-end .vector-client-prefs-landmark {
+.vector-feature-client-prefs-pinned-disabled .vector-column-end .vector-client-prefs-landmark,
+.vector-feature-client-prefs-pinned-clientpref-1 .vector-user-links .vector-client-prefs-landmark,
+.vector-feature-client-prefs-pinned-clientpref-0 .vector-column-end .vector-client-prefs-landmark {
 	display: none;
 }
 
