--- a/resources/skins.vector.styles/layouts/grid.less
+++ b/resources/skins.vector.styles/layouts/grid.less
@@ -31,8 +31,10 @@
 		grid-area: footer;
 	}
 
+	// Remove selector after I636a557e724f23ea18da135bac59cb304ba81091 has been in prod
 	.vector-feature-page-tools-pinned-enabled .vector-column-end,
-	.vector-feature-client-prefs-pinned-enabled .vector-column-end {
+	.vector-feature-client-prefs-pinned-enabled .vector-column-end,
+	.vector-feature-client-prefs-pinned-clientpref-1 .vector-column-end {
 		width: @width-column-desktop;
 	}
 
@@ -65,8 +67,10 @@
 		}
 	}
 
+	// TODO: Remove old classes after I636a557e724f23ea18da135bac59cb304ba81091 has been in prod
 	.vector-feature-page-tools-pinned-enabled .vector-column-end,
-	.vector-feature-client-prefs-pinned-enabled .vector-column-end {
+	.vector-feature-client-prefs-pinned-enabled .vector-column-end,
+	.vector-feature-client-prefs-pinned-clientpref-1 .vector-column-end {
 		width: @width-column-desktop-wide;
 	}
 }
@@ -122,8 +126,10 @@
 		}
 	}
 
+	// TODO: Remove old classes after I636a557e724f23ea18da135bac59cb304ba81091 has been in prod
 	.vector-feature-page-tools-pinned-enabled .mw-body,
-	.vector-feature-client-prefs-pinned-enabled .mw-body {
+	.vector-feature-client-prefs-pinned-enabled .mw-body,
+	.vector-feature-client-prefs-pinned-clientpref-1 .mw-body {
 		column-gap: @grid-column-gap;
 	}
 
