Add exclusion notice for night mode feature
If night-mode is disabled on a certain page via the
exclude list in skin.json, then the following class:
".skin-theme-clientpref-excluded" will be added to the HTML element.

In this scenario, the related client-preferences
menu options are visible, but disabled, and a notice
is rendered below the options informing users of this state.

Bug: T361158
Change-Id: I46d335d079a2d27c7a4122e23ac7e479c286b886

--- a/resources/skins.vector.styles/components/ClientPreferences.less
+++ b/resources/skins.vector.styles/components/ClientPreferences.less
@@ -10,6 +10,10 @@
 	}
 }
 
+.exclusion-notice {
+	color: @color-disabled;
+}
+
 /* If JS is disabled the menu should not render at all */
 .client-nojs .vector-client-prefs-landmark {
 	display: none;
