Rename client preference menu to appearance menu
Bug: T362808
Change-Id: Id6800d38eebf433cf0c9e3f179dd83df2eefd1fb

--- a/resources/skins.vector.styles/skin.less
+++ b/resources/skins.vector.styles/skin.less
@@ -24,7 +24,7 @@
 	@import './components/StickyHeader.less';
 	@import './components/TableOfContents.less';
 	@import './components/Button.less';
-	@import './components/ClientPreferences.less';
+	@import './components/Appearance.less';
 	@import './components/LanguageDropdown.less';
 	@import './components/UserLinks.less';
 	@import './components/Header.less';
