Drop background base declaration
This has been confusing a few editors and breaks support with
Extension:DarkMode so let's remove for now.

Change-Id: I84a58b49f8f3d5af8765531bc14c43b42fe39a1d

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -20,7 +20,7 @@
 }
 
 .night-mode-palette() {
-	--background-color-base: #101418;
+	/* T354889 */
 }
 
 .vector-feature-custom-font-size-clientpref-1 {
