--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -1,9 +1,13 @@
-@font-size-user-links: unit( 14 / @font-size-browser, em ); // Equals `0.875em`.
-// Applies to links in the overflow menu that do not have the .cdx-button class.
-@overflow-link-margin: 0 8px;
+/**
+* UserLinks
+* All links and menus that appear in the header,
+* at the top of the page, after the search bar.
+*/
 
 /**
- * Container that holds both the horizontal menu and dropdown menus.
+ * Top-most container that holds ALL menus in the user links section
+ * (horizontal menus and dropdowns)
+ * Logged-in and logged-out.
  */
 .vector-user-links {
 	display: flex;
@@ -12,13 +16,20 @@
 	justify-content: flex-end;
 	flex-shrink: 1;
 
-	.mw-list-item {
+	// Spacing for all top-level menu icons.
+	.mw-list-item,
+	.vector-dropdown-label {
+		margin: 0 @spacing-25;
+	}
+	// Reset margins on items inside dropdowns.
+	.vector-dropdown-content .mw-list-item {
 		margin: 0;
 	}
 }
 
 /**
- * Both logged-in and logged-out dropdown menus.
+ * Container that holds just the dropdown user menu (displays "..." when logged out).
+ * Logged-in and logged-out.
  */
 .vector-user-menu {
 	.vector-dropdown-content {
@@ -35,6 +46,10 @@
 	}
 }
 
+/**
+ * Container that holds all menus except the user menu (.vector-user-menu).
+ * Logged-in and logged-out.
+ */
 .vector-user-links-main {
 	display: flex;
 	align-items: center;
@@ -42,31 +57,7 @@
 	.vector-menu-content-list {
 		display: flex;
 		align-items: center;
-		font-size: @font-size-user-links;
-	}
-
-	@media ( min-width: @min-width-breakpoint-desktop ) {
-		// Right margin to separate overflow menu from dropdown
-		margin-right: 8px;
-
-		#p-vector-user-menu-notifications,
-		#p-vector-user-menu-userpage,
-		#p-vector-user-menu-preferences {
-			margin-right: 8px;
-		}
-
-		.vector-menu-content-list {
-			column-gap: 8px;
-		}
-	}
-
-	@media ( max-width: @max-width-breakpoint-tablet ) {
-		// Only apply 8px spacing to normal links (i.e. Create account, User page)
-		// Links with button classes will have a larger touch area
-		// and therefore dont need additional spacing
-		a:not( .mw-echo-notifications-badge  ):not( .cdx-button ) {
-			margin: 0 8px;
-		}
+		font-size: @font-size-base;
 	}
 
 	.user-links-collapsible-item {
@@ -77,14 +68,14 @@
 }
 
 /**
- * Logged-in dropdown menu
+ * Logged-in dropdown user menu.
  */
 .vector-user-menu-logged-in .vector-dropdown-label {
 	.mixin-vector-arrowed-dropdown-toggle();
 }
 
 /**
- * Dropdown menu items- Special treatment for special links.
+ * Logged-out dropdown user menu items- Special treatment for special links.
  */
 #p-user-menu-anon-editor .vector-menu-heading {
 	display: block;
@@ -99,10 +90,10 @@
 }
 
 /**
- * User-page link in personal (overflow) menu.
+ * Logged-in user-page link in personal (overflow) menu.
  */
 #pt-userpage-2 {
-	max-width: unit( 155 / @font-size-browser / @font-size-user-links, em );
+	max-width: unit( 155 / @font-size-browser / @font-size-base, em );
 	overflow: hidden;
 	text-overflow: ellipsis;
 
@@ -118,6 +109,6 @@
 	// T287522#7295558: Increase the max-width of the username when viewport
 	// allows for it.
 	@media ( min-width: @min-width-breakpoint-desktop-wide ) {
-		max-width: unit( 200 / @font-size-browser / @font-size-user-links, em );
+		max-width: unit( 200 / @font-size-browser / @font-size-base, em );
 	}
 }
