Wrap sitenotices in core
Depends-On: Ib48b1f54c326a0363841b2f592d8fd4cf7312b9b
Bug: T361966
Change-Id: I14cab105a798a5c9e615892c3305bfbd459a7a51

--- a/includes/templates/skin.mustache
+++ b/includes/templates/skin.mustache
@@ -35,7 +35,7 @@
 <div class="mw-page-container">
 	<div class="mw-page-container-inner">
 		<div class="vector-sitenotice-container">
-			<div id="siteNotice">{{{html-site-notice}}}</div>
+			{{{html-site-notice}}}
 		</div>
 		{{>ColumnStart}}
 		<div class="mw-content-container">
