Prepare variables for night mode
* Drop all hexcodes
* Drop unused background-color-secondary - only applies in legacy
skin and replaced by background-color-secondary--modern
* Drop unused  border-color-content and border-color-content--tabs-inactive -
only apply to legacy Vector skin

Bug: T354889
Change-Id: Ie0accaaac2ac3717b6f034c5832f8c372b91c343

--- a/resources/skins.vector.styles/variables.less
+++ b/resources/skins.vector.styles/variables.less
@@ -49,20 +49,15 @@
 
 @size-icon: unit( 20 / @font-size-browser, em );
 
-// FIXME: Use global variable since Echo and CentralNotice use this variable
-@border-color-content: #a7d7f9;
 // Due to darker background gradient, border needs to be darkened for aligned visual perception.
-@border-color-content--tabs-inactive: darken( @border-color-content, 10% );
-@border-color-portal-heading: #c8ccd1;
-// Use `rgba()` notation for better Safari support, see T254489.
-@border-start-blockquote: 4px @border-style-base #eaecf0;
+@border-color-portal-heading: @border-color-subtle;
+@border-start-blockquote: 4px @border-style-base @border-color-muted;
 @padding-blockquote: 8px 32px;
 
-@background-color-secondary--modern: #f8f9fa;
-@background-color-page-container: var( --background-color-base );
+@background-color-secondary--modern: @background-color-neutral-subtle;
+@background-color-page-container: @background-color-base;
 
 // Navigation
-@background-color-secondary: #f6f6f6;
 // Navigation `line-height` has to be set in `em`s due to a rendering calculation issue.
 @line-height-nav: 1.125em;
 
