--- a/includes/templates/TableOfContents__line.mustache
+++ b/includes/templates/TableOfContents__line.mustache
@@ -9,7 +9,7 @@
 	{{/extensionData.DiscussionTools-html-summary}}
 	{{#is-top-level-section}}{{#is-parent-section}}
 		<button aria-controls="toc-{{anchor}}-sublist" class="cdx-button cdx-button--weight-quiet cdx-button--icon-only vector-toc-toggle">
-			<span class="vector-icon vector-icon--x-small mw-ui-icon-wikimedia-expand"></span>
+			<span class="vector-icon mw-ui-icon-wikimedia-expand"></span>
 			<span>{{{vector-button-label}}}</span>
 		</button>
 	{{/is-parent-section}}{{/is-top-level-section}}
