--- a/resources/skins.vector.js/stickyHeader.less
+++ b/resources/skins.vector.js/stickyHeader.less
@@ -1,5 +1,6 @@
 @spacing-search-title-divider: 30px;
 @font-size-sticky-header-links: unit( 14 / @font-size-browser, em ); // Equals `0.875em`.
+@import '../skins.vector.styles/variables.less';
 
 .vector-sticky-header-container {
 	position: fixed;
