--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -147,6 +147,9 @@ body {
 	.mixin-vector-page-container-sizing();
 }
 
+.vector-feature-limited-width-clientpref--excluded .mw-page-container,
+.vector-feature-limited-width-clientpref--excluded .vector-sticky-header,
+.vector-feature-limited-width-clientpref--excluded .mw-header,
 .vector-feature-limited-width-clientpref-0 .mw-page-container,
 .vector-feature-limited-width-clientpref-0 .vector-sticky-header,
 .vector-feature-limited-width-clientpref-0 .mw-header {
