Override VE overlays in night-mode
Creates a Less variable `@OOUIOverrideSelectors` which can serve
as a list of selectors that we want to treat the same as the `.notheme`
class (as an alternative to adding the `.notheme` class across repos).

Adds only one selector to this variable, `.ve-ui-overlay-global`
in order to force VE overlays to appear in light-mode while night-mode is
enabled.

This is a temporary measure until T363849 is resolved.

Bug: T363861
Change-Id: I3e3a209f1a9bd9130fc61915b9b2ff7134405e59

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -3,6 +3,20 @@
 @import 'mediawiki.skin.codex-design-tokens/theme-wikimedia-ui-reset.less';
 
 /**
+ * FIXME: Temporary Night-mode override classes
+ * Remove these once T363849 has been addressed.
+ *
+ * The following classes are meant to force OOUI interfaces
+ * into light-mode when night-mode is enabled. They should be
+ * grouped with the `.notheme` rulset as an alternative to
+ * using the `.notheme` class in multiple places.
+ *
+ * Note: These are wrapped in quotes to avoid dashed being interpreted as minus signs,
+ * along with a `~` to unwrap them when they are used as selectors.
+ */
+@OOUIOverrideSelectors: ~'.ve-ui-overlay-global';  // T363861 - VisualEditor Overlays
+
+/**
  * Light mode
  *
  * Applies the light mode color palette by default
@@ -10,7 +24,8 @@
  */
 :root,
 .skin-invert,
-.notheme {
+.notheme,
+@{OOUIOverrideSelectors} {
 	.cdx-mode-reset();
 }
 
@@ -34,7 +49,8 @@ html.skin-theme-clientpref-night .skin-invert {
 	filter: invert( 1 ) hue-rotate( 180deg );
 }
 
-html.skin-theme-clientpref-night .notheme {
+html.skin-theme-clientpref-night .notheme,
+html.skin-theme-clientpref-night @{OOUIOverrideSelectors} {
 	color-scheme: light;
 	color: var( --color-base );
 }
@@ -54,7 +70,8 @@ html.skin-theme-clientpref-night .notheme {
 		--color-link-red: #b97876;
 	}
 
-	html.skin-theme-clientpref-os .notheme {
+	html.skin-theme-clientpref-os .notheme,
+	html.skin-theme-clientpref-os @{OOUIOverrideSelectors} {
 		color-scheme: light;
 	}
 
