[Follow-up] Override VE overlays in night-mode
Follow-up to 26d39ec, change VE overlay selector
from `.ve-ui-overlay-global` to `.ve-ui-overlay`.

Bug: T363861
Change-Id: Ie531ce6d03d81fbce374f7e17c785d4bb076bfda

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -14,7 +14,7 @@
  * Note: These are wrapped in quotes to avoid dashed being interpreted as minus signs,
  * along with a `~` to unwrap them when they are used as selectors.
  */
-@OOUIOverrideSelectors: ~'.ve-ui-overlay-global';  // T363861 - VisualEditor Overlays
+@OOUIOverrideSelectors: ~'.ve-ui-overlay';  // T363861 - VisualEditor Overlays
 
 /**
  * Light mode
