Override default sublist styles
Bug: T364865
Change-Id: I179c059992b2ae614b984b8023774306764ccb57

--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -14,6 +14,12 @@ body {
 	font-family: @font-family-sans;
 }
 
+ul {
+	// Overrides default sublist styling due to lists being used in some talk pages (i.e. russian wiki)
+	// https://phabricator.wikimedia.org/T364865#9802562
+	list-style-type: disc;
+}
+
 pre,
 .mw-code {
 	line-height: @line-height-code;
