--- a/resources/skins.vector.styles/components/Header.less
+++ b/resources/skins.vector.styles/components/Header.less
@@ -20,9 +20,12 @@
 	.search-toggle {
 		// At lower resolutions the search input is hidden and a toggle is shown
 		display: inline-flex;
-		float: right;
 		// Ensures the button has a font size of 16px
 		font-size: unit( 16 / @font-size-browser, rem );
+
+		@media ( min-width: @min-width-breakpoint-tablet ) {
+			float: right;
+		}
 
 		@media ( min-width: @min-width-breakpoint-desktop ) {
 			// Override .cdx-button styles
@@ -39,6 +42,11 @@
 	}
 
 	@media ( max-width: @max-width-breakpoint-tablet ) {
+		#p-search,
+		.vector-header-end {
+			.cdx-mixin-button-layout-flush( 'start', true );
+		}
+
 		/**
 	 	 * Toggles the visibility of the search box at lower resolutions.
 		 */
