--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -114,6 +114,17 @@ body {
 	background-color: @background-color-page-container;
 }
 
+@media ( max-width: @max-width-breakpoint-tablet ) {
+	.vector-header {
+		flex-flow: column;
+	}
+
+	.vector-header-start,
+	.vector-header-end {
+		width: 100%;
+	}
+}
+
 @media ( min-width: @min-width-breakpoint-desktop ) {
 	.mw-page-container,
 	.vector-header-container .mw-header,
