Fixes: Echo icon display when clicked
Styles removed in 1d17b46 were being utilised for Echo without
us knowing. Rather than revert that patch (which seems risky
so late in the day) I think it's preferable to restore these styles
for the Echo icons inside the skinStyle

Bug: T365409
Change-Id: Ibb967343f9c97c5fbe87d29b40e871f0f336f957

--- a/skinStyles/ext.echo.styles.badge.less
+++ b/skinStyles/ext.echo.styles.badge.less
@@ -2,6 +2,8 @@
 
 .mixin-notification-badge() {
 	position: relative;
+	background-position: center;
+	background-repeat: no-repeat;
 
 	// When 99+ allow counter so spill outside icon
 	&.cdx-button {
