[Visual change] Limits two row header to mobile devices
I accidentally enabled this on tablet breakpoint.

Follow up to e3d2ab503165bbedadd881113bacc34f18e928e5
The Pixel UI report should only surface changes on mobile - all
of these are improvements as it means the whole UI is visible in
the viewport.

Bug: T361573
Change-Id: I8aa5699a8fe959c1595d74c03f19c14856f6470f

--- a/resources/skins.vector.styles/components/Header.less
+++ b/resources/skins.vector.styles/components/Header.less
@@ -23,7 +23,7 @@
 		// Ensures the button has a font size of 16px
 		font-size: unit( 16 / @font-size-browser, rem );
 
-		@media ( min-width: @min-width-breakpoint-tablet ) {
+		@media ( min-width: @min-width-breakpoint-mobile ) {
 			float: right;
 		}
 
@@ -41,12 +41,14 @@
 		}
 	}
 
-	@media ( max-width: @max-width-breakpoint-tablet ) {
+	@media ( max-width: @max-width-breakpoint-mobile ) {
 		#p-search,
 		.vector-header-end {
 			.cdx-mixin-button-layout-flush( 'start', true );
 		}
+	}
 
+	@media ( max-width: @max-width-breakpoint-tablet ) {
 		/**
 	 	 * Toggles the visibility of the search box at lower resolutions.
 		 */
