Small font size is not applying to excluded pages
Bug: T364887
Change-Id: Ib24beb3a383599dcc3ad64e01992ead908e3bef3

--- a/resources/skins.vector.styles/CSSCustomProperties.less
+++ b/resources/skins.vector.styles/CSSCustomProperties.less
@@ -84,6 +84,7 @@ html.skin-theme-clientpref-night @{OOUIOverrideSelectors} {
 /**
  * Font size settings
  */
+.vector-feature-custom-font-size-clientpref--excluded,
 .vector-feature-custom-font-size-clientpref-0 {
 	--font-size-medium: @font-size-small;
 	--line-height-medium: @line-height-small;
