Revert "Add exclusion behaviour for "width" option in Appearance menu"
This reverts commit ff5a61e9c682e22012e1db8cfbea4bd9ff3fb358.

Reason for revert: The behaviour introduced in this patch needs some more consideration.

Bug: T364015
Change-Id: Ieab4ca4084df4f1b5c942fe81c7fb99b058e0623

--- a/resources/skins.vector.styles/components/BottomDock.less
+++ b/resources/skins.vector.styles/components/BottomDock.less
@@ -31,6 +31,12 @@
 	display: none;
 }
 
+// On pages that have $wgVectorMaxWidthOptions['exclude'] true,
+// the toggle should be hidden. This rule overrides the media query below.
+html.vector-feature-limited-width-clientpref--excluded .vector-limited-width-toggle.cdx-button {
+	display: none;
+}
+
 // Note on certain pages the control will have no effect e.g. Special:RecentChanges
 // Defining this at 1400px is a product decision so do not change it
 // (more context at https://phabricator.wikimedia.org/T326887#8540889)
