Adds invert exception for dropdown
* Adds a filter invert rule for toggle

Bug: T365035
Change-Id: Id04e3937ff1ef3982563003346fda07348ae26ea

--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -25,6 +25,21 @@
 		height: unit( 12 / @font-size-browser, rem );
 		// https://phabricator.wikimedia.org/T319070#8284272
 		margin-left: 7px;
+
+		html.skin-theme-clientpref-night & {
+			filter: invert( 1 );
+		}
+
+		/**
+		* Auto night mode.
+		*
+		* Applies the night mode color palette only in response to system settings.
+		*/
+		@media ( prefers-color-scheme: dark ) {
+			html.skin-theme-clientpref-os & {
+				filter: invert( 1 );
+			}
+		}
 	}
 }
 
