--- a/includes/templates/UserLinks.mustache
+++ b/includes/templates/UserLinks.mustache
@@ -1,4 +1,4 @@
-<nav class="vector-user-links{{#is-wide}} vector-user-links-wide{{/is-wide}}" aria-label="{{msg-personaltools}}" role="navigation" >
+<nav class="vector-user-links{{#is-wide}} vector-user-links-wide{{/is-wide}}" aria-label="{{msg-personaltools}}">
 	<div class="vector-user-links-main">
 	{{#data-user-links-preferences}}{{>Menu}}{{/data-user-links-preferences}}
 	{{#data-user-links-user-page}}{{>Menu}}{{/data-user-links-user-page}}
