--- a/includes/templates/skin.mustache
+++ b/includes/templates/skin.mustache
@@ -40,7 +40,7 @@
 		{{>ColumnStart}}
 		<div class="mw-content-container">
 			{{! `role` is unnecessary but kept to support selectors in any gadgets or user styles. }}
-			<main id="content" class="mw-body" role="main">
+			<main id="content" class="mw-body">
 				{{>PageTitlebar}}
 				{{>PageToolbar}}
 				{{>ColumnEnd}}
