--- a/resources/skins.vector.styles/components/LanguageDropdown.less
+++ b/resources/skins.vector.styles/components/LanguageDropdown.less
@@ -25,7 +25,7 @@
 
 		// T291286: Temporarily use progressive ULS style
 		&.cdx-button--action-progressive.cdx-button--weight-quiet::after {
-			background-image: url( ./images/arrow-down-progressive.svg );
+			mask-image: url( ./images/arrow-down-progressive.svg );
 			opacity: @opacity-base;
 		}
 	}
