Follow-up to Id04e39 "Adds invert exception for dropdown"
Adds hue-rotate( 180deg ) to the
.mixin-vector-arrowed-dropdown-toggle() mixin so that
the language icon doesn't appear with an orange
chevron in dark-mode.

Bug: T366337
Change-Id: If8f07e5924a31d761ac0af7efe0d982886bf6984

--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -27,7 +27,12 @@
 		margin-left: 7px;
 
 		html.skin-theme-clientpref-night & {
-			filter: invert( 1 );
+			// For night-mode, invert icons so they go from black to white.
+			// Since invert( 1 ) changes the hue (e.g. from blue to orange)
+			// hue-rotate( 180deg ) changes the hue back to that of the original color.
+			// This slightly corrects progressive/destructive colored icons
+			// (although their lightness & saturation are still different, e.g. language button).
+			filter: invert( 1 ) hue-rotate( 180deg );
 		}
 
 		/**
@@ -37,7 +42,7 @@
 		*/
 		@media ( prefers-color-scheme: dark ) {
 			html.skin-theme-clientpref-os & {
-				filter: invert( 1 );
+				filter: invert( 1 ) hue-rotate( 180deg );
 			}
 		}
 	}
