--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -64,22 +64,49 @@
 	max-width: 200px;
 }
 
+// Base links without a visited state
+.mixin-vector-unvisited-link-base() {
+	&:visited {
+		color: @color-progressive;
+	}
+
+	&:visited:hover {
+		color: @color-progressive--hover;
+	}
+}
+
+// Red links without a visited state
+.mixin-vector-unvisited-link-red() {
+	&:visited {
+		color: @color-link-red;
+	}
+
+	&:visited:hover {
+		color: @color-link-red--hover;
+	}
+}
+
+// Used for "selected" links inside tabs and dropdowns
+.mixin-vector-selected-link() {
+	// Override all link states to style it as text
+	color: @color-base !important; /* stylelint-disable-line declaration-no-important */
+}
+
 .mixin-vector-dropdown-menu-item() {
 	display: flex;
 	align-items: center;
 	padding: @padding-vertical-dropdown-menu-item 0;
 
-	&:not( .mw-selflink ):visited {
-		color: @color-link;
-	}
-
 	.vector-icon {
 		margin-right: @spacing-35;
 	}
 
-	&.selected a,
-	&.selected a:visited {
-		color: @color-link-selected;
+	&:not( .mw-selflink ) {
+		.mixin-vector-unvisited-link-base();
+	}
+
+	&.selected a {
+		.mixin-vector-selected-link();
 	}
 }
 
