--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -174,6 +174,14 @@ pre,
 	}
 }
 
+a {
+	.cdx-mixin-link-base();
+
+	&.new {
+		.cdx-mixin-link-red();
+	}
+}
+
 // T335625 - Move siteSub into common.less to prevent it from being feature-flagged
 // and overriding on-wiki modifications.
 #siteSub {
