build: Updating stylelint-config-wikimedia to 0.17.1
Change-Id: I7c1411a3aac14cf6fb4fdbb762b0de22b348b73f

--- a/resources/skins.vector.styles/components/Dropdown.less
+++ b/resources/skins.vector.styles/components/Dropdown.less
@@ -45,8 +45,7 @@
 		opacity: 0;
 		height: 0;
 		visibility: hidden;
-		overflow-x: hidden;
-		overflow-y: auto;
+		overflow: hidden auto;
 		z-index: @z-index-dropdown;
 		.mixin-vector-dropdown-menu();
 		max-height: 75vh;
