--- a/resources/skins.vector.styles/layouts/grid.less
+++ b/resources/skins.vector.styles/layouts/grid.less
@@ -7,7 +7,7 @@
 		display: grid;
 		column-gap: @grid-column-gap;
 		grid-template: ~'min-content 1fr min-content / @{grid-template-column-desktop}';
-		// stylelint-disable-next-line stylistic/declaration-colon-space-after
+		// stylelint-disable-next-line @stylistic/declaration-colon-space-after
 		grid-template-areas:
 			'siteNotice siteNotice'
 			'columnStart pageContent'
@@ -75,7 +75,7 @@
 .vector-feature-main-menu-pinned-disabled.vector-toc-not-available .mw-page-container-inner,
 .vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-0 .mw-page-container-inner {
 	grid-template-columns: @width-page-content;
-	// stylelint-disable-next-line stylistic/declaration-colon-space-after
+	// stylelint-disable-next-line @stylistic/declaration-colon-space-after
 	grid-template-areas:
 		'siteNotice'
 		'pageContent'
@@ -97,7 +97,7 @@
 		 * the Content Translation extension and should not be used beyond that.
 		 * FIXME: This can be removed when T322740 is resolved.
 		 */
-		// stylelint-disable-next-line stylistic/declaration-colon-space-after
+		// stylelint-disable-next-line @stylistic/declaration-colon-space-after
 		grid-template-areas:
 			'titlebar-cx .'
 			'titlebar columnEnd'
