--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -84,8 +84,7 @@
 }
 
 .mixin-vector-scrollable-with-fade() {
-	overflow-x: hidden;
-	overflow-y: auto;
+	overflow: hidden auto;
 
 	&::after {
 		content: '';
