--- a/resources/skins.vector.styles/components/BottomDock.less
+++ b/resources/skins.vector.styles/components/BottomDock.less
@@ -14,8 +14,7 @@
 		display: flex;
 		flex-direction: column-reverse;
 		align-items: center;
-		column-gap: 8px;
-		row-gap: 8px;
+		gap: 8px 8px;
 	}
 }
 
